# Jetta

./: .coveragerc  .gitignore  .pylintrc  README.md  log.html  output.xml  pyproject.toml  report.html  schema.sql  test.db
.github/workflows/: main.yml
documentation/: final_report.md  instructions.md
src/: AppLibrary.py  app.py  build.py  database.py  db_connection.py  log.html  output.xml  report.html  routes.py  test.db  util.py
src/repositories/: note_repository.py  user_repository.py
src/services/: bib_service.py  note_service.py  user_service.py
src/static/css/: styles_main.css
src/templates/: base.html  create_note.html  credentials_frame.html  login.html  main.html  note_listing.html  register.html
src/tests/: database_test.py  home.robot  login.robot  note_resource.robot  register.robot  resource.robot  util_test.py
src/tests/repositories/: note_repository_test.py  user_repository_test.py
src/tests/services/: bib_service_test.py  note_service_test.py  test_service.py  user_service_test.py
