[tool.poetry]
name = "jetta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
pytest = "^7.2.0"
pylint = "^2.15.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
